--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="utf-8">
     <title>Taş Kağıt Makas</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script type = "text/javascript"
+    src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
+    </script>
+    <script type = "text/javascript" 
+    src = "https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js">
+    </script>
+    <script type = "text/javascript" language = "javascript" >
+    $(document).ready(function() {
+      $("#kurtar").click(function(){
+        $(".yukPuani").effect( "shake", {times:4}, 1000 );
+      });
+    });
+  </script>
   </head>
   <body>
     <header>
@@ -20,13 +33,14 @@
     <p id="bilgi">HOŞGELDİN!</p>
     <div class="secimler">
       <!-- taş makas kağıt resimleri -->
-      <div id="secimTas" class="secim"><img id="t" src="img/1.jpg"></div>
-      <div id="secimKagit" class="secim"><img id="k"src="img/2.jpg"></div>
-      <div id="secimMakas" class="secim"><img id="m" src="img/3.jpg"></div>
+      <div id="secimTas" class="secim"><img id="t" src="img/1.jpg"></div><span id="yukseltTas">+</span>
+      <div id="secimKagit" class="secim"><img id="k"src="img/2.jpg"></div><span id="yukseltKagit">+</span>
+      <div id="secimMakas" class="secim"><img id="m" src="img/3.jpg"></div><span id="yukseltMakas">+</span>
     </div>
     <!-- durum çubuğu -->
     <p class="durum">Hareket et!</p>
-
+    <p class="yukPuani">Yük Puanı: <i>0</i></p>
+    <button id="kurtar">Kurtar Beni!</button>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
