--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
     <p class="yukPuani">Yük Puanı: <i>0</i></p>
     <button id="kurtar">Kurtar Beni!</button>
     <script type="text/javascript" src="app.js"></script>
-    <script type = "text/javascript"
-    src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
+    <script type = "text/javascript" src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
     </script>
-    <script type = "text/javascript" 
-    src = "https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js">
+    <script type = "text/javascript" src = "https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js">
     </script>
     <script type = "text/javascript" language = "javascript" >
     $(document).ready(function() {
