Added move limit for spam

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <p id="bilgi">HOŞGELDİN!</p>
     <div class="secimler">
       <!-- taş makas kağıt resimleri -->
-      <div id="secimTas" class="secim"><img id="t" src="img/1.jpg"></div><span id="yukseltTas">+</span>
-      <div id="secimKagit" class="secim"><img id="k"src="img/2.jpg"></div><span id="yukseltKagit">+</span>
-      <div id="secimMakas" class="secim"><img id="m" src="img/3.jpg"></div><span id="yukseltMakas">+</span>
+      <div id="secimTas" class="secim"><text class="limitler" id="tasLimit"></text><img id="t" src="img/1.jpg"></div><span id="yukseltTas">+</span>
+      <div id="secimKagit" class="secim"><text class="limitler" id="kagitLimit"></text><img id="k"src="img/2.jpg"></div><span id="yukseltKagit">+</span>
+      <div id="secimMakas" class="secim"><text class="limitler" id="makasLimit"></text><img id="m" src="img/3.jpg"></div><span id="yukseltMakas">+</span>
     </div>
     <!-- durum çubuğu -->
     <p class="durum">Hareket et!</p>
