--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <p class="durum">Hareket et!</p>
     <p class="yukPuani">Yük Puanı: <i>0</i></p>
     <button id="kurtar">Kurtar Beni!</button>
+
+
+    <i style="position:absolute;bottom:0;left:0;"><small>mertcanuslu18@gmail.com</small></i>
+
     <script type="text/javascript" src="app.js"></script>
     <script type = "text/javascript" src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
     </script>
